# Multi_project

Utils/: README.md  pyproject.toml
Utils/utils_cod/db/models/client/: client.py
Utils/utils_cod/db/models/plan/: plan.py
Utils/utils_cod/extensions/client/enums/: client_type.py
Utils/utils_cod/extensions/plan/enums/: plan_type.py  price.py  velocity.py
